add 6.6 file io.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 pytorch/
 mine/data/
 mine/chapter_multilayer_perceptrons/submission.csv
+mine/chapter_builders'_guide/mlp_params
+mine/chapter_builders'_guide/mydict-file
+mine/chapter_builders'_guide/x-file
+mine/chapter_builders'_guide/xy-files
