Add chapter 13 computational performance. Add compilers and interpreters.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ mine/chapter_builders'_guide/mlp_params
 mine/chapter_builders'_guide/mydict-file
 mine/chapter_builders'_guide/x-file
 mine/chapter_builders'_guide/xy-files
+mine/computational_performance/my_mlp
