--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ mine/chapter_builders'_guide/mydict-file
 mine/chapter_builders'_guide/x-file
 mine/chapter_builders'_guide/xy-files
 mine/computational_performance/my_mlp
+mine/img/
